feat: add pricing and footer sections + responsiveness

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               Consequatur quod veniam voluptatum aliquid labore aperiam iste
               ipsa delectus vero tempore?
             </p>
-            <div class="pricing__wrapper">
+            <div class="pricing__plans">
               <div class="plan">
                 <h3 class="plan__title">Free</h3>
                 <div class="plan__icon">
@@ -291,17 +291,17 @@
                 <button class="plan__button">Get Now</button>
               </div>
               <div class="plan">
-                <h3 class="plan__title">Free</h3>
+                <h3 class="plan__title">Deluxe</h3>
                 <div class="plan__icon">
-                  <i class="fa-solid fa-user"></i>
+                  <i class="fa-solid fa-people-group"></i>
                 </div>
-                <span class="plan__price"> 0$.00 </span>
+                <span class="plan__price"> $50.00 </span>
                 <ul class="plan__features">
-                  <li class="plan__feature">Free Feature 1</li>
-                  <li class="plan__feature">Free Feature 2</li>
-                  <li class="plan__feature">Free Feature 3</li>
-                  <li class="plan__feature">Free Feature 4</li>
-                  <li class="plan__feature">Free Feature 5</li>
+                  <li class="plan__feature">Deluxe Feature 1</li>
+                  <li class="plan__feature">Deluxe Feature 2</li>
+                  <li class="plan__feature">Deluxe Feature 3</li>
+                  <li class="plan__feature">Deluxe Feature 4</li>
+                  <li class="plan__feature">Deluxe Feature 5</li>
                 </ul>
                 <button class="plan__button">Get Now</button>
               </div>
@@ -310,5 +310,18 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer -->
+    <footer>
+      <div class="row footer__row">
+        <span class="footer__logo"> company. </span>
+        <div>
+          <a href="#products" class="footer__link">Products</a>
+          <a href="features" class="footer__link">Features</a>
+          <a href="reviews" class="footer__link">Reviews</a>
+          <a href="pricing" class="footer__link">Pricing</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
